--- a/wallet/package.json
+++ b/wallet/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@react-navigation/stack": "^7.4.8",
@@ -20,6 +21,7 @@
     "expo-secure-store": "~15.0.7",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
+    "react-native-ble-plx": "^3.5.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-get-random-values": "^1.11.0",
