--- a/wallet/app.json
+++ b/wallet/app.json
@@ -29,6 +29,11 @@
     "plugins": [
       "expo-sqlite",
       "expo-secure-store"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "60789dd8-01d9-4d8f-8078-6474161fcc05"
+      }
+    }
   }
 }
