Add BLE permissions and Phase 0 implementation - BLE relayer service with crypto handshake, payload serialization, connectivity integration, and runtime permission requests

--- a/wallet/app.json
+++ b/wallet/app.json
@@ -21,7 +21,16 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.anonymous.wallet"
+      "package": "com.anonymous.wallet",
+      "permissions": [
+        "BLUETOOTH",
+        "BLUETOOTH_ADMIN",
+        "BLUETOOTH_CONNECT",
+        "BLUETOOTH_SCAN",
+        "BLUETOOTH_ADVERTISE",
+        "ACCESS_FINE_LOCATION",
+        "ACCESS_COARSE_LOCATION"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
