--- a/wallet/app.json
+++ b/wallet/app.json
@@ -29,7 +29,8 @@
         "BLUETOOTH_SCAN",
         "BLUETOOTH_ADVERTISE",
         "ACCESS_FINE_LOCATION",
-        "ACCESS_COARSE_LOCATION"
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_BACKGROUND_LOCATION"
       ]
     },
     "web": {
