--- a/wallet/package.json
+++ b/wallet/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@react-navigation/stack": "^7.4.8",
+    "buffer": "^6.0.3",
+    "crypto-js": "^4.2.0",
     "ethers": "5",
     "expo": "~54.0.10",
     "expo-camera": "~17.0.8",
@@ -20,15 +22,16 @@
     "expo-secure-store": "~15.0.7",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
-    "react-native-ble-plx": "^3.5.0",
-    "buffer": "^6.0.3",
-    "crypto-js": "^4.2.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-ble-plx": "^3.5.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@react-native-community/cli": "20.0.2"
+  }
 }
